Adding algorithms, continuing review

--- a/BackMatter/Conclusions.tex
+++ b/BackMatter/Conclusions.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = es_ES
 \begin{conclusions}\label{conclusion}
 
 \qquad 
@@ -12,21 +13,18 @@ La inteligencia artificial, y en particular el aprendizaje automático, es cada 
 
 Con el objetivo de liberar a los expertos de las tareas menos creativas en la implementación de sistemas de aprendizaje automático, las organizaciones se están volcando cada vez más hacia la automatización en el trabajo de ciencia de datos, comenzando con la adopción de técnicas que automatizan la creación de modelos de aprendizaje automático~\cite{drozdal2020trust, wang2019humanai}. Sin embargo, la adopción de esta tecnología en entornos empresariales no ha sido perfecta. Actualmente, las herramientas de AutoML tienen restricciones respecto a lo que pueden realizar de manera flexible~\cite{crisan2021fits}. %Los sistemas de extremo a extremo que abarcan todo el espectro del trabajo de la ciencia de datos, desde la preparación de los datos hasta la comunicación, aún no se han realizado por completo~\cite{lee2019AHP, zoller2019surver}.
 
-Una de las limitaciones presente en los primeros sistemas de AutoML consiste en su inhabilidad de rehusar conocimiento previo para solucionar nuevas tareas. Para cerrar esta brecha, las herramientas de AutoML comenzaron a aplicar técnicas de meta-learning, las cuales tienen el objetivo de obtener modelos para nuevas tareas usando experiencias previas. Este tipo de estrategias ayudan a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. 
+Una de las limitaciones presente en los primeros sistemas de AutoML consiste en su inhabilidad de rehusar conocimiento previo para solucionar nuevas tareas. Para cerrar esta brecha, las herramientas de AutoML comenzaron a aplicar técnicas de meta-learning, las cuales tienen el objetivo de obtener modelos para nuevas tareas usando experiencias de aprendizaje anteriores. Este tipo de estrategias ayudan a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. 
 
-Aunque existen varias herramientas de meta-learning que han sido exitosas al aplicarse a AutoML, resolviendo problemas específicos de inteligencia artificial, estas herramientas son aún demasiado rígidas para ser utilizadas en problemas prácticos que requieren la combinación de algoritmos y tecnologías de diferente naturaleza. La propuesta de meta-learning implementada es capaz de abordar una gran variedad de problemas mediante la selección de meta-características capaces de representarlos. Además, explorando la interacción entre las características de los datasets y la estructura de los flujos, el método propuesto es capaz de identificar flujos con un buen rendimiento sin realizar un análisis computacionalmente costoso. Como sistema de AutoML complementario se eligió AutoGOAL, que destaca por su capacidad de generar soluciones eficaces para una amplia gama de tareas y dominios, permitiéndole resolver una amplia gama de tareas. AutoGOAL es usado para la generación de flujos de algoritmos para crear la base de conocimiento, por lo que se presenta gran diversidad en los flujos guardados debido a la variedad de herramientas de aprendizaje automático que AutoGOAL utiliza.
+Aunque existen varias herramientas de meta-learning que han sido exitosas al aplicarse a AutoML, resolviendo problemas específicos de inteligencia artificial, estas herramientas son aún demasiado rígidas para ser utilizadas en problemas prácticos que requieren la combinación de algoritmos y tecnologías de diferente naturaleza. La propuesta de meta-learning implementada es capaz de abordar una gran variedad de problemas mediante la selección de meta-características capaces de representarlos. Además, explorando la interacción entre las características de los datasets y la estructura de los flujos, el método propuesto es capaz de identificar flujos con un buen rendimiento sin realizar un análisis computacionalmente costoso. Como sistema de AutoML complementario se eligió AutoGOAL, que destaca por su capacidad de generar soluciones eficaces para una gran cantidad de dominios, permitiéndole resolver una amplia gama de tareas. AutoGOAL es usado para la generación de flujos de algoritmos para crear la base de conocimiento, por lo que se presenta gran diversidad en los flujos guardados debido a la variedad de herramientas de aprendizaje automático que AutoGOAL utiliza.
 
-El enfoque desarrollado se propone como un paso preliminar para otras soluciones más costosas computacionalmente, como por ejemplo, para la inicialización de sistemas de AutoML. En esta investigación AutoGOAL también es usado como herramienta complementaria en el proceso de búsqueda de flujos. Por lo tanto, se describe como se realiza la adición de conocimiento experto a la estrategia de búsqueda utilizada por AutoGOAL: \textit{Probabilistic Grammatical Evolution}~\cite{pge2015}, que no había sido usada anteriormente con meta-learning.
+El enfoque desarrollado se propone como un paso preliminar para otras soluciones más costosas computacionalmente, como por ejemplo, para la inicialización de sistemas de AutoML. En esta investigación AutoGOAL también es usado como herramienta complementaria en el proceso de búsqueda de flujos. Por lo tanto, se describe como se realiza la adición de conocimiento experto a la estrategia de búsqueda utilizada por AutoGOAL: Evolución Gramatical Probabilística~\cite{pge2015}, que no había sido usada anteriormente con meta-learning.
 
-Para la realización de la propuesta, se extrajeron meta-características, que, además de proveer información referente a los datos del dataset (relacionados a valores medios, desviación estándar, etc), son capaces de proporcionar conocimiento sobre la tarea que el dataset está representando. Además, mediante la extracción de flujos de aprendizaje a través de AutoGOAL, se obtuvo una gran variedad de flujos de algoritmos. Esto, junto con la gran cantidad de datasets utilizados garantiza la capacidad de abarcar una gran cantidad de tareas.
+Para la realización de la propuesta se extrajeron meta-características, que además de proveer información referente a los datos del dataset (relacionados a valores medios, desviación estándar, etc), son capaces de proporcionar conocimiento sobre la tarea que el dataset está representando. Además, mediante la extracción de flujos de aprendizaje a través de AutoGOAL, se obtuvo una gran variedad de flujos de algoritmos. Esto, junto con la gran cantidad de datasets utilizados garantiza la capacidad de abarcar una gran cantidad de tareas.
 
 La propuesta de meta-learning consiste en la selección de un conjunto de flujos de algoritmos para ser propuestos en la inicialización de la optimización de AutoGOAL. La elección de este conjunto de flujos se realiza mediante un enfoque de ranking, en el que para un nuevo dataset se seleccionan los \texttt{k} mejores flujos de algoritmos. Para esto, se implementaron varias estrategias.
 
-La evaluación experimental realizada en un gran número de datasets muestra que estas estrategias de meta-learning obtienen mejores resultados con respecto a AutoGOAL sin meta-learning, sin ninguna consideración de dominio o problema específico. Se tienen en cuenta varios factores: la cantidad de flujos inválidos generados por estas dos estrategias, la evolución del proceso de optimización a través de las iteraciones y los resultados de rendimiento obtenidos para cada una de las versiones probadas.
+La evaluación experimental realizada en un gran número de datasets muestra que estas estrategias de meta-learning obtienen mejores resultados con respecto a AutoGOAL sin meta-learning, sin ninguna consideración de dominio o problema específico. Para demostrar esto se realiza una extensa experimentación que incluye 305 datasets de clasificación. Se tienen en cuenta varios factores: la cantidad de flujos inválidos generados por estas dos estrategias, la evolución del proceso de optimización a través de las iteraciones y los resultados de rendimiento obtenidos para cada una de las versiones probadas.
 
-\section{Trabajos Futuros}
-
-- Hablar de la necesidad de abarcar más tipos de problemas. 
-- This is a test
+La implementación de los modelos de meta-learning y la experimentación realizada se encuentra disponible en \url{https://github.com/lorainemg/autogoal.git}. Este repositorio de GitHub se encuentra público, es un \textit{fork} del repositorio de AutoGOAL, ya que el código fuente de este sistema de AutoML tuvo que ser modificado para la obtención de los flujos de algoritmos obtenidos en cada iteración del proceso de búsqueda para su almacenamiento en la base de conocimiento y la inicialización del proceso de optimización AutoGOAL. El código referente al análisis de los resultados obtenidos mediante la creación de las gráficas presentes en la experimentación (Capítulo~\ref{chapter:results}) está disponible en \url{https://github.com/lorainemg/experiments-thesis.git}.
 
 \end{conclusions}
