--- a/FrontMatter/Abstract.tex
+++ b/FrontMatter/Abstract.tex
@@ -1,5 +1,11 @@
 \begin{abstract}
 
+El campo de aprendizaje de máquinas automático (AutoML) se ha destacado como una de las principales alternativas para encontrar soluciones óptimas o cercanas para problemas complejos de aprendizaje automático. A pesar del reciente éxito de AutoML, todavía quedan muchos desafíos. El aprendizaje de AutoML es un proceso que consume mucho tiempo y puede llegar a ser ineficiente. Meta-learning es descrito como el proceso de aprender de experiencias pasadas aplicando varios algoritmos de aprendizaje en diferentes tipos de datos, y por lo tanto reduce el tiempo necesitado para aprender nuevas tareas. Una de las ventajas de las técnicas de meta-learning es que pueden servir como un apoyo eficiente para el proceso de AutoML, aprendiendo de tareas previas los mejores algoritmos para resolver un determinado tipo de problema. De esta manera, es posible acelerar el proceso de AutoML, obteniendo mejores resultados en el mismo período de tiempo. El objetivo de esta tesis es diseñar una estrategia de meta-learning para dominios genéricos en el aprendizaje automático.
+
+La propuesta de meta-learning implementada es capaz de abordar una gran variedad de tareas mediante la selección de características capaces de representarlas. Además, explorando la interacción entre las características de los datasets y la estructura de los flujos, el método propuesto es capaz de identificar flujos con un buen rendimiento sin realizar un análisis computacionalmente costoso. Como sistema de AutoML complementario se eligió AutoGOAL, que destaca por su capacidad de generar soluciones eficaces para una amplia gama de dominios, permitiéndole resolver una gran cantidad de tareas. AutoGOAL es usado para la generación de flujos de algoritmos para crear la base de conocimiento, por lo que se presenta gran diversidad en los flujos guardados debido a la variedad de herramientas de aprendizaje automático que AutoGOAL utiliza. 
+
+El enfoque de meta-learning desarrollado consiste en la selección de un conjunto de flujos de algoritmos para ser propuestos en la inicialización del proceso de optimización de un sistema de AutoML. La elección de este conjunto de flujos se realiza mediante un enfoque de ranking, en el que para un nuevo dataset se seleccionan los \texttt{k} mejores flujos de algoritmos. Para esto, se implementaron varias estrategias. La evaluación experimental realizada en un gran número de datasets muestra que estas estrategias de meta-learning obtienen mejores resultados en cuanto a los flujos de algoritmos encontrados con respecto a AutoGOAL sin meta-learning, sin ninguna consideración de dominio o problema específico.
+
 \end{abstract}
 
 %
