--- a/MainMatter/Proposal.tex
+++ b/MainMatter/Proposal.tex
@@ -114,7 +114,7 @@ En la Tabla~\ref{tab:metafeat} se muestran las meta-características utilizadas 
 
 \begin{center}
 	\begin{longtable}{l|c|c|c}
-		\caption{Lista de meta-características y sus características.} 		\label{tab:metafeat} \\
+		\caption{Caracterización del conjunto de meta-características.} 		\label{tab:metafeat} \\
 		\hline
 		\textbf{Meta-Característica} & \textbf{Tipo} & \textbf{Tarea} & \textbf{Dominio} \\
 		\hline \hline
@@ -162,7 +162,30 @@ En la Tabla~\ref{tab:metafeat} se muestran las meta-características utilizadas 
 
 Además de las meta-características, se extrajo información relacionada con las soluciones de las tareas, que fueron utilizadas como características para el meta-modelo. En la fase de adquisición de conocimiento, la solución de las tareas deben ser generadas. El enfoque de meta-learning seguido no intenta simplemente determinar un buen algoritmo con sus hiperparámetros como solución, sino un ``flujo de algoritmos'', lo que complejiza la generación de estos. Un flujo $p = <a^1, ..., a^2>$  puede ser visto como un caso especial de algoritmo que aplica cada algoritmo $a^i$ de forma secuencial a la salida del algoritmo anterior en la secuencia. Formalmente, se puede ver como la composición de los algoritmos correspondientes, es decir, $p(x) = a^n(a^{n-1}(...a^1(x)...))$.
 
-Para la generación de los flujos de algoritmos se utilizó AutoGOAL. En cada uno de los datasets se ejecutó AutoGOAL y se guardaron las arquitecturas generadas junto con su rendimiento. El formato en el que se guardaron fue dependiente de la estructura en la que AutoGOAL procesa los flujos. Los algoritmos se ponen primero secuencialmente, luego existe una palabra clave \texttt{END} para representar el final de estos. Después, se ponen los hiperparámetros de los algoritmos de la forma  `\texttt{\{algoritmo\}\_\{hiperparámetro\}}' para identificarlos. Además de las estructuras de los flujos de algoritmos, se guardó el modelo probabilístico que siguió AutoGOAL para la formación de dicho flujo.
+Para la generación de los flujos de algoritmos se utilizó AutoGOAL. En cada uno de los datasets se ejecutó AutoGOAL y se guardaron las arquitecturas generadas junto con su rendimiento. El formato en el que se guardaron fue dependiente de la estructura en la que AutoGOAL procesa los flujos. Los algoritmos se ponen primero secuencialmente, luego existe una palabra clave \texttt{End} para representar el final de estos. Después, se ponen los hiperparámetros de los algoritmos de la forma  `\texttt{\{algoritmo\}\_\{hiperparámetro\}}' para identificarlos. En el algoritmo~\ref{alg:flows} se muestra un ejemplo del formato JSON en el que son guardados los flujos. Además de las estructuras de los flujos de algoritmos, se guardó el modelo probabilístico que siguió AutoGOAL para la formación de dicho flujo.
+
+\begin{algorithm}
+\begin{lstlisting}[language=json,firstnumber=1]
+{
+  "FeatureAgglomeration": [1],
+  "KNeighborsClassifier": [1],
+  "End": [1],
+  "FeatureAgglomeration_n_clusters": [3],
+  "FeatureAgglomeration_affinity": [0],
+  "FeatureAgglomeration_compute_full_tree": [0],
+  "FeatureAgglomeration_linkage": [0],
+  "KNeighborsClassifier_n_neighbors": [5],
+  "KNeighborsClassifier_weights": [0],
+  "KNeighborsClassifier_algorithm": [2],
+  "KNeighborsClassifier_leaf_size": [23],
+  "KNeighborsClassifier_p": [3],
+  "KNeighborsClassifier_metric": [0]}
+\end{lstlisting}
+\caption{Ejemplo de como se almacenan los flujos generados por AutoGOAL}
+\label{alg:flows}
+\end{algorithm}
+
+
 
 En una de las estrategias seguidas, se implementa un meta-modelo que usa las meta-características de los datasets de entrenamiento y la representación de los flujos de algoritmos generados como características y el rendimiento de estos flujos como etiquetas. Esta información es utilizada para su entrenamiento.
 
@@ -177,15 +200,15 @@ En un sistema de meta-learning la aplicación de meta-conocimiento puede ser uti
 
 La selección de algoritmos fue realizada mediante un enfoque de ranking, en el que para un nuevo dataset se seleccionan los \texttt{k} mejores flujos de algoritmos. Para esto se implementaron varias estrategias, que son descritas a continuación.
 
-\subsubsection{Estrategia de Vecinos Más Cercanos}\label{subsub:nn}
+\subsubsection{Estrategia de Vecinos Cercanos}\label{subsub:nn}
 
 %- Explicar de forma general cómo funciona la estrategia de nearest neighbors, mencionar que es de las estrategias más usadas. Consiste en extraer las _k_ instancias más similares a un dataset nuevo, y formar un ranking de recomendación seleccionando los _n_ pipelines de mejor rendimiento de los datasets seleccionados para el nuevo dataset.
 %- Explicar que está compuesta por varios pasos, en el primer paso, dado un dataset nuevo, se computan sus meta-features y se selecciona un conjunto de _k_ instancias en el conjunto de entrenamiento que son similares al dataset actual. Generalmente la similitud está basada en una métrica de distancia, hablar de cuáles fueron las implementadas.
 %- Explicar el segundo paso: se seleccionan los _n_ mejores pipelines de los _k_ mejores datasets y se genera un ranking para el nuevo dataset, explicar cómo se genera ese ranking.
 
-La primera estrategia, de \textit{Nearest Neighbors} o Vecinos Más Cercanos, consiste en extraer los flujos candidatos para un dataset determinado en dependencia de las características de los \texttt{k} datasets más similares a él. Se extraen los \texttt{n} flujos de algoritmos que hayan tenido mejor rendimiento en cada uno de los \texttt{k} datasets, y estos flujos son combinados para formar un nuevo ranking para el nuevo dataset. Este enfoque puede ser dividido en dos pasos: la búsqueda de los vecinos cercanos y la generación de un ranking.
+La primera estrategia, de \textit{Nearest Neighbors} o Vecinos Más Cercanos, consiste en extraer los flujos candidatos para un dataset determinado en dependencia de las características de los \texttt{n} datasets más similares a él. Se extraen los \texttt{m} flujos de algoritmos que hayan tenido mejor rendimiento en cada uno de los \texttt{n} datasets, y estos flujos son combinados para formar un nuevo ranking para el nuevo dataset. Este enfoque puede ser dividido en dos pasos: la búsqueda de los vecinos cercanos y la generación de un ranking.
 
-En el primer paso, dado un dataset nuevo, se calculan sus meta-características con el objetivo de construir un vector de características. Luego, se selecciona un conjunto de \texttt{k} instancias (vecinos cercanos) en el dataset de entrenamiento que son similares al nuevo dataset. Esta similitud está basada en una medida de distancia (por ejemplo, la distancia euclidiana), que es aplicada entre los vectores de características de los datasets de entrenamiento y el nuevo dataset. La solución seguida soporta cualquier función de similitud, para comprobar el funcionamiento del sistema el siguiente conjunto de medidas fueron implementadas:
+En el primer paso, dado un dataset nuevo, se calculan sus meta-características con el objetivo de construir un vector de características. Luego, se selecciona un conjunto de \texttt{n} instancias (vecinos cercanos) en el conjunto de entrenamiento que son similares al nuevo dataset. Esta similitud está basada en una medida de distancia (por ejemplo, la distancia euclidiana), que es aplicada entre los vectores de características de los datasets de entrenamiento y el nuevo dataset. La solución seguida soporta cualquier función de similitud, para comprobar el funcionamiento del sistema el siguiente conjunto de medidas fueron implementadas:
 
 \begin{itemize}
 %	\item similitud coseno: es una medida de similitud existente entre dos vectores en un espacio que posee un producto interior con el que se evalúa el valor del coseno comprendido entre ellos. $$cos(\theta) = \dfrac{A \multiply B}{||A||||B||}$$.
@@ -193,15 +216,33 @@ En el primer paso, dado un dataset nuevo, se calculan sus meta-características 
 	\item Distancia Euclidiana o L2: es la distancia ``ordinaria'' entre dos puntos de un espacio euclidiano, la cual se deduce a partir del teorema de Pitágoras. La distancia entre dos vectores $A = a_1, a_2, ..., a_n$ y $B = b_1, b_2, ..., b_n$ en un espacio n-dimensional se define como: $d_2(A, B)=\sqrt{(a_1 - b_1)^2 + (a_2 - b_2)^2 + ... + (a_n - b_n)^2}$
 \end{itemize}
 
-En el segundo paso, se obtienen los rankings de los \texttt{n} flujos de algoritmos con mejor rendimiento para cada uno de los \texttt{k} datasets similares seleccionados. Luego, estos rankings son combinados para formar un ranking para el nuevo dataset. El nuevo ranking es generado en dependencia del rendimiento de los \texttt{n} flujos de algoritmos en sus respectivos dataset. Por ejemplo, si se seleccionan los $2$ datasets más cercanos, $d_1$ y $d_2$ y para cada uno de estos datasets se obtienen $2$ flujos: $p^1_1$ y $p^1_2$ para $d_1$ y $p^2_1$ y $p^2_2$ para $d_2$ con los siguientes resultados: $p^1_1 = 0.98$, $p^1_2 = 0.90$ , $p^2_1 = 0.99$, $p^2_2 = 0.97$, estos resultados son combinados obteniendo el ranking final para el nuevo dataset: $p^2_1$, $p^1_1$, $p^2_2$ y $p^1_2$.
+En el segundo paso, se obtienen los rankings de los \texttt{m} flujos de algoritmos con mejor rendimiento para cada uno de los \texttt{n} datasets similares seleccionados. Luego, estos rankings son combinados para formar un ranking de los mejores \texttt{k} flujos de algoritmos para el nuevo dataset. El nuevo ranking es generado en dependencia del rendimiento de los \texttt{m} flujos de algoritmos en sus respectivos dataset. Por ejemplo, si se seleccionan los $2$ datasets más cercanos, $d_1$ y $d_2$ y para cada uno de estos datasets se obtienen $2$ flujos: $p^1_1$ y $p^1_2$ para $d_1$ y $p^2_1$ y $p^2_2$ para $d_2$ con los siguientes resultados: $p^1_1 = 0.98$, $p^1_2 = 0.90$ , $p^2_1 = 0.99$, $p^2_2 = 0.97$, estos resultados son combinados obteniendo el ranking final para el nuevo dataset: $p^2_1$, $p^1_1$, $p^2_2$ y $p^1_2$. En el Algoritmo~\ref{alg:nn.proc} se muestra el pseudocódigo con un resumen de los pasos seguidos para la obtención del ranking final de flujos de algoritmos.
 
-Una de las desventajas de este enfoque es la necesidad de especificar y determinar los mejores valores para la cantidad de datasets similares seleccionados \texttt{n} y la cantidad de flujos de algoritmos seleccionados \texttt{k}. Además, este enfoque no tiene en cuenta la magnitud de la medida de similitud entre los dos datasets. Por ejemplo, en el caso de que un dataset determinado sea muy similar a uno de los dataset de entrenamiento puede ser mejor seleccionar los \texttt{k} mejores flujos de ese dataset nada más. Por otro lado, si el dataset es bastante diferente a todos los datasets del conjunto de entrenamiento debe ser mejor seleccionar el mejor flujo en los \texttt{k} datasets más similares. Por estas razones fue implementada otra estrategia de generación de rankings. 
+\begin{algorithm}
+	\begin{algorithmic}
+		 \State $\vartriangleright$ Primer Paso
+		 \State $meta\_caracteristicas \gets \textbf{preprocesar\_meta\_carcateristicas}(dataset)$
+		
+		 \State $similar\_datasets \gets \textbf{similar\_datasets}(meta\_caracteristicas, metrica\_distancia,\text{ }\texttt{n})$  \\\\
+		 
+		 $\vartriangleright$ Segundo Paso 
+		 
+		 \State $flujos, rendimientos \gets \textbf{mejores\_flujos}(similar\_datasets,\text{ }\texttt{m}) $
+		 
+		 \State $ranking \gets \textbf{ordenar\_flujos\_por\_rendimiento}(flujos,\text{ }rendimientos,\text{ } \texttt{k})$ \\
+		 \Return ranking
+	\end{algorithmic}
+	\caption{Procedimiento para obtener el ranking de mejores flujos en la estrategia de Vecinos Cercanos.}
+	\label{alg:nn.proc}
+\end{algorithm}
 
-El otro método para la generación de rankings consiste en un mecanismo ponderado entre dos factores: la distancia entre el nuevo dataset y los datasets del conjunto de entrenamiento, y el valor del resultado de rendimiento de los flujos de algoritmos en los dataset similares. Aunque con esta solución no es necesario especificar los valores de \texttt{n} y \texttt{k}, existen infinitas maneras de combinar estos dos factores. La estrategia seguida para su combinación fue una de las más directas: la división entre el resultado de rendimiento de un flujo de algoritmos en un dataset similar y el valor de distancia entre los dataset. De esta forma, los datasets que tengan menor distancia entre sí y los flujos que tengan un mejor rendimiento obtendrán un mayor resultado. Los resultados de esta división son los utilizados para generar el ranking de los flujos candidatos para la nueva tarea.
+Una de las desventajas de este enfoque es la necesidad de especificar y determinar los mejores valores para la cantidad de datasets similares seleccionados \texttt{n} y la cantidad de flujos de algoritmos seleccionados \texttt{m}. Además, este enfoque no tiene en cuenta la magnitud de la medida de similitud entre los dos datasets. Por ejemplo, en el caso de que un dataset determinado sea muy similar a uno de los dataset de entrenamiento puede ser mejor seleccionar los \texttt{m} mejores flujos de ese dataset nada más. Por otro lado, si el dataset es bastante diferente a todos los datasets del conjunto de entrenamiento debe ser mejor seleccionar el mejor flujo en los \texttt{n} datasets más similares. Por estas razones fue implementada otra estrategia de generación de rankings. 
+
+El otro método para la generación de rankings consiste en un mecanismo ponderado entre dos factores: la distancia entre el nuevo dataset y los datasets del conjunto de entrenamiento, y el valor del resultado de rendimiento de los flujos de algoritmos en los dataset similares. Aunque con esta solución no es necesario especificar los valores de \texttt{n} y \texttt{m}, existen infinitas maneras de combinar estos dos factores. La estrategia seguida para su combinación fue una de las más directas: la división entre el resultado de rendimiento de un flujo de algoritmos en un dataset similar y el valor de distancia entre los dataset. De esta forma, los datasets que tengan menor distancia entre sí y los flujos que tengan un mejor rendimiento obtendrán un mayor resultado. Los resultados de esta división son los utilizados para generar el ranking de los flujos candidatos para la nueva tarea.
 
 Este último enfoque tiene una desventaja, y es que los pares dataset-flujo guardados en la base de conocimiento puede ser un número grande. Por lo tanto, para una mayor eficiencia del algoritmo se utiliza la información referente al tamaño del ranking final. Si se tiene que el resultado final va a ser un ranking de, por ejemplo, 15 flujos, entonces nunca va a ser necesario analizar más de los 15 flujos con mejor rendimiento en cada uno de los datasets. El mismo razonamiento se puede aplicar con la cantidad de datasets, es poco probable que sea útil analizar más allá de los 15 datasets más similares, sin embargo, esta última heurística no funciona siempre. Falla en el caso de que haya poca diferencia en la similitud de los 16 primeros datasets y además los flujos de algoritmos probados tengan una puntuación baja, y luego el dataset 16 tenga un flujo con un alto rendimiento, en cuyo caso, será mejor elegir el último dataset. Por estos razonamientos, esta última heurística no fue implementada. Para cada uno de los datasets se analizan los 15 mejores flujos de algoritmos de todos los datasets.
 
-\subsubsection{Estrategia utilizando un Ranker}\label{subsub:ranker}
+\subsubsection{Estrategia utilizando un meta-modelo}\label{subsub:ranker}
 
 %- Explicar también de forma general cómo funciona esta estrategia. En esta estrategia se usa un algoritmo de ranking para predecir el rendimiento de un par dataset-pipeline sin necesidad de ejecutar dicho pipeline. Midiendo la similitud de los dataset con un nuevo dataset se extraen un conjunto de pipelines recomendados, y estos algoritmos son presentados junto con el dataset nuevo al meta-modelo, obteniendo un ranking de pipelines recomendados.
 %- Esta estrategia también funciona en 2 fases: en la primera fase se computan los meta-features del nuevo y se seleccionan los datasets similares y los pipelines candidatos de una manera similar a la del método anterior.
@@ -220,9 +261,37 @@ Los algoritmos contenidos en los flujos de algoritmos que genera AutoGOAL tienen
 
 Se utilizaron solo los algoritmos sin sus hiperparámetros para que el meta-modelo sepa cuáles algoritmos son buenos, de manera general, para un dataset determinado. Sin embargo, para cada secuencia de algoritmos en un dataset se pueden recuperar los algoritmos con sus hiperparámetros, ya que estos están guardados en la base de conocimiento. En el caso de que exista una secuencia igual de algoritmos en un mismo dataset se puede considerar el flujo con mejor resultado de rendimiento. Al final, cuando el meta-modelo genera un ranking, la secuencia de números es descodificada y los hiperparámetros de los algoritmos que componen el flujo de algoritmos son retornados. Por lo tanto, en el ranking final se recuperan los hiperparámetros de los algoritmos seleccionados.
 
-En la segunda fase de la estrategia, los flujos de algoritmos candidatos pre-procesados son concatenados con el vector de características del nuevo dataset y son presentados al meta-modelo. Como resultado, el meta-modelo retorna un ranking basado en el rendimiento esperado de cada uno de los flujos en el dataset. Se retorna una lista con los \texttt{k} mejores flujos y, como se mencionó anteriormente, estos flujos son post-procesados para obtener los hiperparámetros con los que fueron utilizados en su dataset original.
-
+En la segunda fase de la estrategia, los flujos de algoritmos candidatos pre-procesados son concatenados con el vector de características del nuevo dataset y son presentados al meta-modelo. Como resultado, el meta-modelo retorna un ranking basado en el rendimiento esperado de cada uno de los flujos en el dataset. Se retorna una lista con los \texttt{k} mejores flujos y, como se mencionó anteriormente, estos flujos son post-procesados para obtener los hiperparámetros con los que fueron utilizados en su dataset original. En el Algoritmo~\ref{alg:ranker.proc} se resumen todos los pasos seguidos para la generación del ranking final.
+ 
 % For the training of our meta-learner, we used XGBoost [7]. More specifically, we used the XGBRanker model with the pairwise rank- ing objective function and shallow trees of 150 estimators. This was done since our problem is in its essence a ranking problem, and previous work [4] has shown that XBGoost is highly suitable for producing ranked lists. Additionally, we used the following hyper- parameters settings: learning rate of 0.1, max depth of 8 and 150 estimators. We set the number of pipelines returned by RankML to k = 10. The algorithm’s parameters were empirically set using the leave-one-out approach.
+
+\begin{algorithm}[H]
+	\begin{algorithmic}
+		\State $\vartriangleright$ Primer Paso
+		\State $meta\_caracteristicas \gets \textbf{preprocesar\_meta\_carcateristicas}(dataset)$
+		
+		\State $similar\_datasets \gets \textbf{similar\_datasets}(meta\_caracteristicas,\text{ }metrica\_distancia,\text{ }\texttt{k})$  
+		
+		\State $flujos, rendimientos \gets \textbf{mejores\_flujos}(similar\_datasets,\text{ } \texttt{k})$
+		
+		\State $flujos\_codificados \gets \textbf{codificar\_flujos}(flujos)$ \\\\
+		
+		$\vartriangleright$ Segundo Paso
+		
+		\State $caracteristicas \gets \textbf{unir\_caracteristicas}(meta\_caracteristicas,\text{ }flujos\_codificados)$
+		
+		\State $y \gets model.\textbf{predict}(caracteristicas)$ 
+		
+		\State $mejores\_flujos \gets \textbf{ordenar\_flujos}(flujos\_codificados,\text{ }y,\text{ }\texttt{k})$
+		
+		\State $ranking \gets \textbf{decodificar\_flujos}(mejores\_flujos)$ \\
+		
+		\Return ranking
+	\end{algorithmic}
+	\caption{Procedimiento para obtener el ranking de mejores flujos en la estrategia utilizando un meta-modelo.}
+	\label{alg:ranker.proc}
+\end{algorithm}
+
 
 Como meta-modelo, se utilizó el modelo XGBRanker de la biblioteca XGBoost~\cite{xgboost} de Python. Este meta-modelo fue elegido ya que el problema seleccionado es en esencia un problema de ranking, y trabajo previo ha demostrado que XGBoost es altamente recomendado para producir listas rankeadas~\cite{rankml}. Además, XGBoost ha sido usado con anterioridad en problemas de meta-learning para la selección de algoritmos~\cite{rankml, atomic}.
 
@@ -230,7 +299,7 @@ XGBoost es una biblioteca de aprendizaje automático ampliamente utilizada, que 
 
 LTR es una clase de técnicas que aplican aprendizaje de máquinas supervisado para resolver problemas de ranking. La principal diferencia entre LTR y ML supervisado tradicional es que ML resuelve un problema de predicción (clasificación o regresión) en una sola instancia en el tiempo mientras que LTR resuelve un problema de ranking retornando una lista de elementos. El objetivo de LTR es proponer una ordenación óptima para esos elementos. La aplicación más común de LTR es el ranking en los motores de búsqueda, pero es útil en cualquier lugar donde necesite producir una lista rankeada de elementos.
 
-XGBoost utiliza el algoritmo de clasificación LambdaMART~\cite{burges2010from} para árboles potenciados (o \textit{boosted trees}), que utiliza el enfoque de ranking por pares (\textit{pairwise ranking}). Ranking por pares es uno de los enfoques más comunes en LTR, donde se elige un par de instancias y se predice el orden de esas dos. Al repetir este procedimiento para cada par de instancia se encuentra el orden final. En XGBoost se elige un par de instancias para cada instancia de entrenamiento durante el aprendizaje, y el gradiente se calcula en función del orden relativo entre ellos.
+XGBoost utiliza el algoritmo de clasificación LambdaMART~\cite{burges2010from} para árboles potenciados (o \textit{boosted trees}), que utiliza el enfoque de ranking por pares (\textit{pairwise ranking}). Ranking por pares es uno de los enfoques más comunes en LTR, donde se elige un par de instancias y se predice el orden de esas dos. Al repetir este procedimiento para cada par se encuentra el orden final. En XGBoost se elige un par de instancias para cada ejemplo de entrenamiento durante el aprendizaje, y el gradiente se calcula en función del orden relativo entre ellos.
 
 %Adicionalmente, se usaron las configuraciones de hiperparámetros siguientes:
 %\begin{itemize}
